--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -69,8 +69,8 @@
     </div>
     </fieldset>
     <small>
-    Don't Have An Account?
-    <a href="{{url_for('home')}}">QUICK-LOGIN</a>
+    Already Have An Account?
+    <a href="{{url_for('home')}}">LOGIN </a>
     </small>
     </form>
 
