--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "Layout.html" %} {% block content %}
+{% extends "layout.html" %} {% block content %}
 
 
     <form method="POST" action=" {{url_for('register1')}}">
